# sdmsh

./: .gitignore  .gitmodules  Makefile  README  TODO  commands.c  commands.h  commands.txt  completion.c  completion.h  convert.c  history.c  history.h  janus-rx.sh  logger.c  logger.h  logger.h.gch  reset.sh  sampleconv.c  sdm.c  sdm.h  sdmlib.c  sdmlib.h  sdmlib.h.gch  sdmsh  sdmsh.c  sdmsh_commands.c  sdmsh_commands.h  shell.c  shell.h  shell.h.gch  shell_completion.c  shell_help.c  shell_help.h  shell_history.c
bindings/: sdm.i
bindings/python/: MANIFEST.i  Makefile  pyproject.toml  sdm.i  sdmapi.py  setup.py
bindings/python/tests/distance/: distance.py
bindings/python/tests/symbiosys/: symbiosys.py
bindings/python/tests/symbiosys-parallel/: symbiosys-parallel.py
bindings/python/tests/usbl/: usbl-active.py  usbl-passive.py
compat/: readline6.c  readline6.h
contrib/: plot-raw.sh  wav2raw.sh
contrib/usbl-tests/: README  sdm-usbl.ipynb  usbl-range-2.exp  usbl-range-active.sdmsh  usbl-range-calc.exp  usbl-range-passive.sdmsh  usbl-range.exp
lib/libsdm/: Makefile  sdm.c  sdm.h  utils.c  utils.h
lib/libsdm-python/: Makefile  rx_test.py  sdm.i  test.py  tx_test.py
lib/libsdm/bindings/python/: Makefile  sdm.i  sdmapi.py
lib/libsdm/bindings/python/tests/distance/: distance.py  distance.sh
lib/libsdm/bindings/python/tests/symbiosys-parallel/: symbiosys-parallel.sh
lib/libsdm/janus/: janus.c  janus.h
lib/libstream/: Makefile  error.h  stream.c  stream.def  stream.h  stream_ascii.c  stream_error.h  stream_popen.c  stream_raw.c  stream_tcp.c
(+4 files in other folders)
